[package]
name = "flatrv-interp"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
description = "A cross-platform RISC-V interpreter that implements the RV32IM instruction set. (CLI)"
license = "MIT"
repository = "https://github.com/losfair/FlatRv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatrv = { path = ".." }
nix = "0.16"
